changed text in css

--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ property: value;
 <link rel="stylesheet" href="main.css">*/
 
 body {
-    background-color: whitesmoke;
+    background-color: white;
     color: black;
 }
 
