ammending main.css

--- a/main.css
+++ b/main.css
@@ -28,11 +28,13 @@ property: value;
 
 <link rel="stylesheet" href="main.css">*/
 
+/* create the body properties*/
 body {
     background-color: #ffffff;
     color: #000000;
 }
 
+/*create nav properties*/
 nav {
    height: 6000px; 
    width: 200px; 
@@ -41,16 +43,19 @@ nav {
    line-height: 30px;
 }
 
+/*create footer properties*/
 footer {
     text-align: center; 
     margin-right: 200px;
 }
 
+/*create memimage properties*/
 #memeImage {
     margin-right: 200px;
             
 }
 
+/* create header properties*/
 header {
     text-align: center;
 }
